# doctor-right

./: .gitignore  eda-combined.ipynb  eda-mips-overal_performance.ipynb  eda-mips-procedurevolume.ipynb  eda-spark.ipynb  eda.ipynb  pyproject.toml  requirements.txt
